Port common module to Minecraft 1.20.1
Switch the build to ModDevGradle legacyforge (Forge 47, Java 17 bytecode),
drop the Fabric module, and convert the access transformer to SRG names.

Add foundry.veil.backport, a set of API-compatible re-implementations of
1.20.5+ utility types (StreamCodec, ByteBufCodecs, RegistryFriendlyByteBuf,
CustomPacketPayload, DeltaTracker, ByteBufferBuilder) that Veil's public API
depends on, and retarget the renderer core to the 1.20.1 vertex, buffer,
chunk rendering, codec and registry APIs.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015FqC5gTAKLojiRgYWcW2SR