@@ -1,5 +1,6 @@
 package foundry.veil.api.client.render.rendertype.layer;
 
+import foundry.veil.api.util.CodecUtil;
 import com.mojang.blaze3d.vertex.VertexFormat;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.DataResult;
@@ -20,13 +21,13 @@ public record CompositeRenderTypeData(VertexFormat format, VertexFormat.Mode mod
                                       boolean affectsCrumbling, boolean sort, boolean outline,
                                       List<RenderTypeLayer[]> layers) {
 
-    private static final Codec<List<List<RenderTypeLayer>>> LAYER_CODEC = Codec.withAlternative(
+    private static final Codec<List<List<RenderTypeLayer>>> LAYER_CODEC = CodecUtil.withAlternative(
             RenderTypeLayer.CODEC.listOf().listOf().flatXmap(
                     list -> list.size() < 2 ? DataResult.error(() -> "Expected at least 2 layers") : DataResult.success(list),
                     list -> list.size() < 2 ? DataResult.error(() -> "Expected at least 2 layers") : DataResult.success(list)),
             RenderTypeLayer.CODEC.listOf().flatXmap(
                     layers -> DataResult.success(Collections.singletonList(layers)),
-                    list -> list.size() == 1 ? DataResult.success(list.getFirst()) : DataResult.error(() -> "Expected 1 shard")
+                    list -> list.size() == 1 ? DataResult.success(list.get(0)) : DataResult.error(() -> "Expected 1 shard")
             )).flatXmap(
             list -> list.isEmpty() ? DataResult.error(() -> "Expected at least 1 layer") : DataResult.success(list),
             list -> list.isEmpty() ? DataResult.error(() -> "Expected at least 1 layer") : DataResult.success(list));
