@@ -74,8 +74,8 @@ public interface ShaderPreProcessor {
     static ShaderPreProcessor allOf(Collection<ShaderPreProcessor> processors) {
         List<ShaderPreProcessor> list = new ArrayList<>(processors.size());
         for (ShaderPreProcessor processor : processors) {
-            if (processor instanceof ShaderMultiProcessor(ShaderPreProcessor[] values)) {
-                list.addAll(Arrays.asList(values));
+            if (processor instanceof ShaderMultiProcessor multiProcessor) {
+                list.addAll(Arrays.asList(multiProcessor.processors()));
             } else if (processor != NOOP) {
                 list.add(processor);
             }
@@ -85,7 +85,7 @@ public interface ShaderPreProcessor {
             return NOOP;
         }
         if (list.size() == 1) {
-            return list.getFirst();
+            return list.get(0);
         }
         return new ShaderMultiProcessor(list.toArray(ShaderPreProcessor[]::new));
     }
